--- a/citePyExample/CMakeLists.txt
+++ b/citePyExample/CMakeLists.txt
@@ -33,7 +33,14 @@ endif ()
 
 find_package(Python COMPONENTS Interpreter Development)
 
-add_subdirectory(extern/pybind11)
+include(FetchContent)
+FetchContent_Declare(
+        pybind11
+        GIT_REPOSITORY https://github.com/pybind/pybind11.git
+        GIT_TAG v2.11.1
+)
+FetchContent_MakeAvailable(pybind11)
+
 add_subdirectory(ExampleLib)
 
 include_directories(ExampleLib)
